--- a/index.html
+++ b/index.html
@@ -7,7 +7,49 @@
 </head>
 <script src="//unpkg.com/brain.js" defer></script>
 <script src="script.js" defer></script>
+<script defer>
+  document.addEventListener("DOMContentLoaded", ready);
+    function ready() {
+    let refreshButton = document.getElementById('refresh').addEventListener("click", refreshPage)
+    let aiValue = document.getElementById('aiValue').innerHTML = results
+  }
+    function refreshPage() {
+      location.reload()
+    }  
+</script>
+<style>
+  * {
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+  }
+  h2, h3 {
+    margin: .5rem;
+  }
+  
+  .btn {
+    margin-right: 20px;
+    background-color: #008CBA;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+  }
+  .info {
+    display: flex;
+    margin: auto;
+  }
+</style>
 <body>
-  <div id="diagram"></div>
+  <h2>Machine Learning Model</h2>
+  <h3>Brain.js</h3>
+  <div class="info">
+    <button id="refresh" class="btn" @click=refreshPage>Refresh</button>
+    <strong id="aiValue">
+    </strong>
+  </div>
+  <hr>
+    <div id="diagram"></div>
 </body>
 </html>
